--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "myapp",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "https://youssefsherif092.github.io/E-commerce",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
